--- a/master-config.json
+++ b/master-config.json
@@ -74,6 +74,11 @@
     }
   },
   "common-masters": {
+    "uiCommonPay": {
+      "masterName": "uiCommonPay",
+      "isStateLevel": true,
+      "uniqueKeys": []
+    },
     "IdFormat": {
       "masterName": "IdFormat",
       "moduleDefinition": null,
