Added Usage Category (#47)

--- a/master-config.json
+++ b/master-config.json
@@ -551,6 +551,13 @@
         "$.code"
       ]
     },
+    "UsageCategory": {
+     "masterName": "UsageCategory",
+     "isStateLevel": true,
+     "uniqueKeys": [
+       "$.code"
+     ]
+   },
     "UsageCategoryMajor": {
       "masterName": "UsageCategoryMajor",
       "isStateLevel": true,
