Update master config

--- a/master-config.json
+++ b/master-config.json
@@ -537,6 +537,27 @@
     }
   },
   "PropertyTax": {
+     "MutationReason": {
+      "masterName": "MutationReason",
+      "isStateLevel": true,
+      "uniqueKeys": [
+        "$.code"
+      ]
+    },
+    "MutationRebate": {
+      "masterName": "MutationRebate",
+      "isStateLevel": true,
+      "uniqueKeys": [
+        "$.fromFY"
+      ]
+    },
+    "MutationPenalty": {
+      "masterName": "MutationPenalty",
+      "isStateLevel": true,
+      "uniqueKeys": [
+        "$.fromFY"
+      ]
+    },
     "ConstructionType": {
       "masterName": "ConstructionType",
       "isStateLevel": true,
