--- a/data/pg/BPA/ApplicationType.json
+++ b/data/pg/BPA/ApplicationType.json
@@ -5,6 +5,10 @@
      {
       "code": "BUILDING_PLAN_SCRUTINY",
       "active": true
+    },
+    {
+      "code":"BUILDING_OC_PLAN_SCRUTINY",
+      "active":true
     }
   ]
 }
